--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,6 @@ jobs:
 
       - run:
           name: Firebase Deploy
-          command: ./node_modules/.bin/firebase deploy --token "$FIREBASE_TOKEN"
+          command: ./functions/node_modules/.bin/firebase deploy --token "$FIREBASE_TOKEN"
       
      
