--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@
 #
 # Check https://circleci.com/docs/2.0/language-javascript/ for more details
 #
-version: 2
+version: 2.1
 jobs:
   build:
     docker:
@@ -35,8 +35,47 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "functions/package.json" }}
 
+  deploy:
+    docker:
+      # specify the version you desire here
+      - image: circleci/node:10
+
+      # Specify service dependencies here if necessary
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+      # - image: circleci/mongo:3.4.4
+
+    working_directory: ~/repo
+
+    steps:
+      - checkout
+
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "functions/package.json" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+
+      - run:
+          name: Install Dependencies
+          command: npm install
+
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "functions/package.json" }}
+
       - run:
           name: Firebase Deploy
-          command: ./functions/node_modules/.bin/firebase deploy --token "$FIREBASE_TOKEN"
-      
-     
+          command: ./node_modules/.bin/firebase deploy --token "$FIREBASE_TOKEN" --only functions
+
+workflows:
+  version: 2.1
+  build-and-deploy:
+    jobs:
+      - build # perform this first
+      - deploy: # perform second
+          requires:
+            - build
+          filters: # only for the master branch
