--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,4 +37,4 @@ jobs:
 
       - run:
           name: Firebase Deploy
-          command: ./node_modules/.bin/firebase deploy --token "$FIREBASE_TOKEN" --only functions
+          command: ./functions/node_modules/.bin/firebase deploy --token "$FIREBASE_TOKEN" --only functions
