--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,7 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "functions/package.json" }}
 
+      - run: cd functions
       - run:
           name: Firebase Deploy
           command: firebase deploy --token "$FIREBASE_TOKEN" --only functions
