--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
       # Download and cache dependencies
       - restore_cache:
           keys:
-            - v1-dependencies-{{ checksum "functions/package.json" }}
+            - v1-dependencies-{{ checksum "package.json" }}
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
@@ -33,9 +33,16 @@ jobs:
       - save_cache:
           paths:
             - node_modules
-          key: v1-dependencies-{{ checksum "functions/package.json" }}
+          key: v1-dependencies-{{ checksum "package.json" }}
 
-      - run: cd functions
+      - run:
+          name: Move Directory
+          command: cd functions
+      
+      - run:
+          name: Install Dependencies
+          command: npm install
+      
       - run:
           name: Firebase Deploy
           command: firebase deploy --token "$FIREBASE_TOKEN" --only functions
