--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,15 +14,12 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/mongo:3.4.4
 
-    working_directory: ~/repo
+    working_directory: ~/repo/functions
 
     steps:
-      - checkout
+      - checkout:
+         path: ~/repo
 
-      - run:
-          name: Move Directory
-          command: cd functions
-      
       # Download and cache dependencies
       - restore_cache:
           keys:
