--- a/functions/package.json
+++ b/functions/package.json
@@ -17,5 +17,8 @@
     "fs-extra": "^8.1.0",
     "multer": "^1.4.2",
     "nodemon": "^2.0.2"
+  },
+  "devDependencies": {
+    "firebase-tools": "^7.12.1"
   }
 }
