--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,21 +17,12 @@ jobs:
     working_directory: ~/repo
 
     steps:
-      - checkout:
-         path: ~/repo
+      - checkout
 
-     - run:
-        name: Move Directory
-        command: cd functions
-
-        - run:
-           name: Log
-           command: ls
-     
       # Download and cache dependencies
       - restore_cache:
           keys:
-            - v1-dependencies-{{ checksum "package.json" }}
+            - v1-dependencies-{{ checksum "functions/package.json" }}
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
@@ -42,8 +33,8 @@ jobs:
       - save_cache:
           paths:
             - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
-      
+          key: v1-dependencies-{{ checksum "functions/package.json" }}
+
       - run:
           name: Firebase Deploy
           command: firebase deploy --token "$FIREBASE_TOKEN" --only functions
