--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,10 +19,14 @@ jobs:
     steps:
       - checkout
 
+      - run:
+        name: Move Directory
+        command: cd ./functions
+
       # Download and cache dependencies
       - restore_cache:
           keys:
-            - v1-dependencies-{{ checksum "functions/package.json" }}
+            - v1-dependencies-{{ checksum "package.json" }}
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
@@ -33,7 +37,7 @@ jobs:
       - save_cache:
           paths:
             - node_modules
-          key: v1-dependencies-{{ checksum "functions/package.json" }}
+          key: v1-dependencies-{{ checksum "package.json" }}
 
       - run:
           name: Firebase Deploy
