--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,8 @@
     "firebase-admin": "^8.9.2",
     "fs-extra": "^8.1.0",
     "multer": "^1.4.2",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "firebase-tools": "^7.12.1"
   },
   "devDependencies": {
     "firebase-tools": "^7.12.1"
