--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,24 +20,24 @@ jobs:
       - checkout
 
       # Download and cache dependencies
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "./functions/package.json" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
+      # - restore_cache:
+      #     keys:
+      #       - v1-dependencies-{{ checksum "./functions/package.json" }}
+      #       # fallback to using the latest cache if no exact match is found
+      #       - v1-dependencies-
 
       - run:
           name: Install Dependencies
           command: cd functions && npm install
 
-      - save_cache:
-          paths:
-            - ./node_modules
-          key: v1-dependencies-{{ checksum "./functions/package-lock.json" }}
+      # - save_cache:
+      #     paths:
+      #       - ./node_modules
+      #     key: v1-dependencies-{{ checksum "./functions/package-lock.json" }}
 
-      # - run:
-      #    name: Build
-      #    command: npm build
+      - run:
+         name: Build
+         command: cd functions && npm build
 
       - run:
           name: Firebase Deploy
