--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,5 +41,6 @@ jobs:
 
       - run:
           name: Firebase Deploy
-          command: cd functions && firebase deploy --token "$FIREBASE_TOKEN" --only functions
+          command: ln -s ./node_modules/.bin/firebase . && \./firebase deploy --token=$FIREBASE_DEPLOY_TOKEN
+          # command: cd functions && firebase deploy --token "$FIREBASE_TOKEN" --only functions
           # command: firebase deploy --token "$FIREBASE_TOKEN" --only functions
