--- a/functions/package.json
+++ b/functions/package.json
@@ -21,10 +21,10 @@
     "firebase-functions": "^3.3.0",
     "fs-extra": "^8.1.0",
     "multer": "^1.4.2",
-    "nodemon": "^2.0.2",
-    "firebase-tools": "^7.12.1"
+    "nodemon": "^2.0.2"
   },
   "devDependencies": {
-    "firebase-functions-test": "^0.1.6"
+    "firebase-functions-test": "^0.1.6",
+    "firebase-tools": "^7.12.1"
   }
 }
