update index.js file

--- a/functions/package.json
+++ b/functions/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ${workspaceFolder}/server.js",
-    "deploy": "firebase deploy --only functions"
+    "start": "node ${workspaceFolder}/index.js",
+    "dev": "firebase emulators:start --only functions"
   },
   "engines": {
     "node": "10"
