--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,28 +19,23 @@ jobs:
     steps:
       - checkout
 
-      # Download and cache dependencies
-      # - restore_cache:
-      #     keys:
-      #       - v1-dependencies-{{ checksum "./functions/package.json" }}
-      #       # fallback to using the latest cache if no exact match is found
-      #       - v1-dependencies-
+      - restore_cache:
+          paths:
+            - ./functions/node_modules
+          keys:
+            - v1-dependencies-{{ checksum "./functions/package.json" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
 
       - run:
           name: Install Dependencies
           command: cd functions && npm install
 
-      # - save_cache:
-      #     paths:
-      #       - ./node_modules
-      #     key: v1-dependencies-{{ checksum "./functions/package-lock.json" }}
-
-      # - run:
-      #    name: Build
-      #    command: cd functions && npm run firebase
+      - save_cache:
+          paths:
+            - ./functions/node_modules
+          key: v1-dependencies-{{ checksum "./functions/package-lock.json" }}
 
       - run:
           name: Firebase Deploy
-          # command: cd functions && npm run deploy
           command: cd functions && ./node_modules/.bin/firebase deploy --token "$FIREBASE_TOKEN" --only functions
-          # command: firebase deploy --token "$FIREBASE_TOKEN" --only functions
